# ltr

./: .gitignore  CMakeLists.txt  README.txt  _c_make_c_compiler_id_8c.html  _c_make_c_x_x_compiler_id_8cpp.html  _contributors.html  _crossvalidation_data.html  _how_to_check_serialization.html  _how_to_create_new_learner_and_scorer.html  _how_to_install.html  _how_to_use_crossvalidation.html  _how_to_write_unittests.html  _quality_table.html  _tutorial_bayesian_classification.html  _tutorial_composition.html  _tutorial_data.html  _tutorial_data_preprocessors.html  _tutorial_decision_tree.html  _tutorial_feature_converters.html  _tutorial_l_t_r_client_for_developer.html  _tutorial_measure_learner_scorer.html  abs__error_8h.html  abs__error_8h__dep__incl.dot  abs__error_8h__dep__incl.map  abs__error_8h__dep__incl.md5  abs__error_8h__incl.dot  abs__error_8h__incl.md5  abs__error_8h_source.html  accuracy_8cc.html  accuracy_8cc__incl.dot  accuracy_8cc__incl.map  accuracy_8cc__incl.md5  accuracy_8h.html  accuracy_8h__dep__incl.dot  accuracy_8h__dep__incl.map  accuracy_8h__dep__incl.md5  accuracy_8h__incl.dot  accuracy_8h__incl.md5  accuracy_8h_source.html  ada__boost__data__set__weights__updater_8h.html  (+2979 more)
cmake/: boost.cmake  copy_test_data.cmake  gtest.cmake  include_openmp.cmake  logog.cmake  ltr.cmake  ltr_client.cmake  puppy.cmake  rlog.cmake  serialization.cmake  setup_ltr.cmake  tinyxml.cmake  utests.cmake  utility.cmake
contrib/: include_Eigen.h  include_openmp.h  include_openmp.h.in
contrib/getopt_pp/: getopt_pp.cc  getopt_pp.h
contrib/logog/: CMakeLists.txt  logog.h
contrib/puppy/: PrimitiveInline.hpp  Tree.hpp
contrib/random/: CauchyDistribution.hpp  ExactExponential.hpp  ExactNormal.hpp  ExactPower.hpp  InverseEProb.hpp  InversePiProb.hpp  MPFRExponential.hpp  MPFRNormal.hpp  MPFRNormalK.hpp  MPFRUniform.hpp  Random.cpp  Random.hpp  RandomAlgorithm.hpp  RandomCanonical.hpp  RandomEngine.hpp  RandomMixer.hpp  RandomSeed.hpp
contrib/rlog/: Error.cpp  Error.h  RLogChannel.cpp  RLogNode.cpp  RLogPublisher.cpp  RLogTime.cpp  RLogTime.h  StdioNode.cpp  common.h  common.h.in  rlog-novariadic.h  rlog.cpp  rlog_all.h  rlog_default.cpp  rlog_default.h  rloginit.cpp  (+1 more)
doc/: CMakeLists.txt  DoxygenLayout.xml  bayesian_classification_tutorial.dox  composition_tutorial.dox  contributors.dox  creating_learner_and_scorer_tutorial.dox  crossvalidation_tutorial.dox  data_preprocessors_tutorial.dox  data_set_presentation.dox  data_set_tutorial.dox  decision_tree_tutorial.dox  doc_contents.dox  doxygen.cfg  feature_converters_tutorial.dox  install_tutorial.dox  logging.dox  ltr_client_developer_tutorial.dox  ltr_client_tutorial.dox  main_page.dox  mls_tutorial.dox  optimization_tutorial.dox  pca_tutorial.dox  quality.dox  serialization.dox  solver_benchmark_tutorial.dox  sources.cmake  unittesting.dox
doc/examples/bayesian_classification_tutorial/: bayesian_classification_tutorial_example1.cpp
doc/examples/composition_tutorial/: composition_tutorial_RSM.cpp  composition_tutorial_ada_boost.cpp  composition_tutorial_ada_boost_short.cpp
doc/examples/crossvalidation_tutorial/: tutorial_crossvalidation_example1.cpp
doc/examples/data_preprocessor_tutorial/: tutorial_data_preprocessor_example1.cpp  tutorial_data_preprocessor_example1.out
doc/examples/data_set_tutorial/: hello_world.cpp  tutorial_data_example1.cpp  tutorial_data_example1.out  tutorial_data_example2.cpp  tutorial_data_example2.out  tutorial_data_example3.cpp  tutorial_data_example3.out  tutorial_data_example4.cpp  tutorial_data_example4.out  tutorial_data_example5.cpp  tutorial_data_example5.out  tutorial_data_example6.cpp  tutorial_data_example6.out  tutorial_data_example7.cpp  tutorial_data_example7.out  tutorial_data_per_object.cpp  tutorial_data_per_object.out
doc/examples/decision_tree_tutorial/: decision_tree_tutorial_example1.cpp
doc/examples/feature_converter_tutorial/: tutorial_feature_converter_example1.cpp  tutorial_feature_converter_example1.out  tutorial_feature_converter_example2.cpp  tutorial_feature_converter_example2.out
doc/examples/install_tutorial/: CMakeLists.txt  make_project.bat  make_project.sh
doc/examples/logging/: example_output.txt  logging.cc  logging_settings.cc
doc/examples/mls_tutorial/: tutorial_mls_example1.cpp
doc/examples/pca_tutorial/: tutorial_pca_example1.cpp
doc/examples/unittesting/: unittest_assertions.cc  unittest_basics.cc  unittest_fixture.cc
jenkins/: build.cmd  build.sh  doxygen.sh  eigen.sh  ltr_site_tests.sh  pep8.sh
jenkins_scripts/: doc.sh  serialization_test.sh
ltr/: interfaces.cc  interfaces.h
ltr_client/: config.cfg  config_constants.h  config_parser.cc  config_parser.h  config_parser_constants.cc  config_parser_unittest.cc  configuration.h  configurator.cc  configurator.h  constants.h  datas_info.h  dependency_resolving_factory.cc  dependency_resolving_factory.h  factory.cc  factory.h  learner_factory.h  learners_info.h  learners_initer.cc  learners_initer.h  ltr_client.cc  ltr_client.h  main.cc  measure_factory.h  measures_info.h  measures_initer.cc  measures_initer.h  register_learners.cc  register_measures.cc  register_splitters.cc  registration.h  splitter_factory.h  splitter_info.h  train_visitor.h  visitors.h
ltr_site/: .gitignore  manage.py  settings.py  urls.py
search/: all_5f.html  all_5f.js  all_61.html  all_61.js  all_62.html  all_62.js  all_63.html  all_63.js  all_64.html  all_64.js  all_65.html  all_65.js  all_66.html  all_66.js  all_67.html  all_67.js  all_68.js  all_69.html  all_69.js  all_6b.html  all_6b.js  all_6c.html  all_6c.js  all_6d.html  all_6d.js  all_6e.html  all_6e.js  all_6f.html  all_6f.js  all_70.html  all_70.js  all_71.html  all_71.js  all_72.html  all_72.js  all_73.html  all_73.js  all_74.html  all_74.js  all_75.html  (+246 more)
serialization_test/: CMakeLists.txt  config.h  generator.cc
serialization_test/generator/: config.h  generator.cc  generator_utility.cc  generator_utility.h
serialization_test/tester/: tester_utility.cc  tester_utility.h
utility/: logger.cc  logger.h  test2.cpp  timer.cc  timer.h
(+739 files in other folders)
